force-app/main/default/objects/SBQQ__Quote__c/fields/b2ble_cpq_cnctr__B2B_Buyer__c.field-meta.xml
<CustomField>
    <fullName>b2ble_cpq_cnctr__B2B_Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Buyer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>