force-app/main/default/objects/SBQQ__Quote__c/fields/b2ble_cpq_cnctr__B2B_Source__c.field-meta.xml
<CustomField>
    <fullName>b2ble_cpq_cnctr__B2B_Source__c</fullName>
    <description>Cart Id from which the quote was generated from</description>
    <label>B2B Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>