force-app/main/default/objects/SBQQ__Quote__c/fields/b2ble_cpq_cnctr__Notes_to_Rep__c.field-meta.xml
<CustomField>
    <fullName>b2ble_cpq_cnctr__Notes_to_Rep__c</fullName>
    <description>B2B Lightning Commerce informs CPQ User of important items about the Quote generated from the Cart.</description>
    <label>B2B Notes to Rep</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>