force-app/main/default/objects/SBQQ__Quote__c/fields/b2ble_cpq_cnctr__Quote_Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>b2ble_cpq_cnctr__Quote_Additional_Details__c</fullName>
    <description>Optional details text field that can be filled at the time of requesting a quote.</description>
    <label>B2B Requested Quote Additional Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>