force-app/main/default/objects/SBQQ__Quote__c/fields/b2ble_cpq_cnctr__Store__c.field-meta.xml
<CustomField>
    <fullName>b2ble_cpq_cnctr__Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>WebStore</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>