force-app/main/default/objects/SBQQ__Quote__c/fields/b2ble_cpq_cnctr__Sync_to_B2B__c.field-meta.xml
<CustomField>
    <fullName>b2ble_cpq_cnctr__Sync_to_B2B__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync to B2B</label>
    <type>Checkbox</type>
</CustomField>