force-app/main/default/objects/SBQQ__Quote__c/fields/Is_Processed_Insights__c.field-meta.xml
<CustomField>
    <fullName>Is_Processed_Insights__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as a filter in batch class to pick up unprocessed quotes whose Ordered checkbox field has not been checked.</description>
    <label>Is Processed</label>
    <type>Checkbox</type>
</CustomField>