force-app/main/default/objects/SBQQ__Quote__c/fields/Order_from_B2B_store_Insights__c.field-meta.xml
<CustomField>
    <fullName>Order_from_B2B_store_Insights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order from B2B store</label>
    <type>Checkbox</type>
</CustomField>