force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Number_Insights__c.field-meta.xml
<CustomField>
    <fullName>Order_Number_Insights__c</fullName>
    <label>Order Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>